# tira

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  configure.ac  uxconfig.h  uxconfig.h.in
doc/: Makefile  Makefile.am  Makefile.in  ipbt.1
src/: Makefile  Makefile.am  Makefile.in  sbcsdat.c
src/.deps/: be_none.Po  fromucs.Po  ipbt.Po  ldiscucs.Po  localenc.Po  macenc.Po  mimeenc.Po  minibidi.Po  misc.Po  noprint.Po  sbcs.Po  sbcsdat.Po  settings.Po  slookup.Po  terminal.Po  time.Po  toucs.Po  tree234.Po  utf8.Po  uxmisc.Po  uxucs.Po  wcwidth.Po  xenc.Po
